--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,9 +16,9 @@ const posts = (await getCollection('posts'))
 <Layout>
   <section class="mt-fluid-5 flex justify-between gap-fluid-4">
     <div>
-      <h1 class="font-normal text-5xl">Hi, I'm Christian</h1>
+      <h1 class="font-normal text-brand text-5xl">Hi, I'm Christian</h1>
       <h2 class="text-2 text-2xl">Front-End Web Developer</h2>
-      <ul class="mt-fluid-4 flex flex-col gap-fluid-1">
+      <ul class="mt-fluid-4 flex flex-col gap-fluid-1 font-light">
         <li class="flex flex-wrap items-center gap-x-2">
           <ArrowRight class="shrink-0" /> Web Developer
           <Anchor href={import.meta.env.JOB}>@McKesson</Anchor>
@@ -63,7 +63,7 @@ const posts = (await getCollection('posts'))
     </ul>
     <a href="/blog" class="group flex items-center gap-2 self-end">
       <span class="text-sm group-hover:text-brand">View All Posts</span>
-      <ArrowRight aria-hidden class="stroke-brand shrink-0" />
+      <ArrowRight aria-hidden class="shrink-0 stroke-brand" />
     </a>
   </section>
 </Layout>
