--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -10,12 +10,12 @@ const { post } = Astro.props;
 <a
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
-  class={`flex h-full flex-col rounded-md bg-2 p-4 shadow
+  class={`flex h-full flex-col gap-1 rounded-md bg-2 p-4 shadow
           hover:outline-2 hover:outline hover:outline-brand
           hover:outline-offset-4`}
 >
-  <span class="font-normal text-brand text-base">{post.data.title}</span>
-  <p class="text-sm">{post.data.description}</p>
+  <span class="text-brand">{post.data.title}</span>
+  <p class="text-xs">{post.data.description}</p>
   <div class="mt-auto pt-4 text-2 text-xs">
     <Date>{post.data.published}</Date>
   </div>
