--- a/src/components/PostTweet.astro
+++ b/src/components/PostTweet.astro
@@ -20,6 +20,6 @@ href.searchParams.append('via', import.meta.env.USERNAME);
   class={`flex items-center gap-2 rounded-md bg-2 py-2 px-4 shadow
           hover:outline hover:outline-2 hover:outline-offset-4 hover:outline-brand`}
 >
-  <Twitter class="h-6 w-6 stroke-brand" />
-  <span class="text-brand text-sm">Share</span>
+  <Twitter class="h-5 w-5 stroke-brand" />
+  <span class="text-brand text-xs">Share</span>
 </a>
