--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,7 +51,7 @@ const {
       <Anchor href={`mailto:${import.meta.env.EMAIL}`}>Email</Anchor>
     </header>
     <main class="mb-fluid-5 flex-1 motion-safe:animate-fade-in"><slot /></main>
-    <footer class="self-center p-2 text-center text-2 text-sm">
+    <footer class="self-center p-2 text-center text-2 text-xs">
       <p>Created by: Christian Penrod ©{new Date().getUTCFullYear()}</p>
       <p>
         Built with: <Anchor href="https://docs.astro.build">Astro</Anchor>
