--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -34,7 +34,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
   og={`og/${post.slug}.png`}
 >
   <article class="mx-auto mt-fluid-3 max-w-screen-sm">
-    <h1 class="mb-fluid-2 text-3xl">{post.data.title}</h1>
+    <h1 class="mb-fluid-1 text-3xl">{post.data.title}</h1>
     <div class="flex gap-8 text-2">
       <div class="flex items-center gap-2">
         <Calendar class="h-5 w-5 stroke-brand" />
@@ -45,8 +45,8 @@ const { Content, remarkPluginFrontmatter } = await post.render();
         <span>{remarkPluginFrontmatter.readingTime} Min Read</span>
       </div>
     </div>
-    <div class="my-8 h-1 rounded-md bg-2"></div>
-    <div class="flex flex-col gap-12">
+    <div class="mt-8 mb-12 h-1 rounded-md bg-2"></div>
+    <div class="flex flex-col gap-10 text-sm">
       <Content components={{ a: Anchor, h2: PostSubheader }} />
       {post.data.repo && <GithubCard repo={post.data.repo} />}
       <div class="flex flex-wrap items-center justify-between gap-2">
@@ -70,6 +70,10 @@ const { Content, remarkPluginFrontmatter } = await post.render();
 
 <style lang="scss" is:global>
   article {
+    p {
+      @apply leading-8;
+    }
+
     em {
       @apply tracking-wider;
     }
@@ -79,7 +83,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
     }
 
     code {
-      @apply font-sans text-sm;
+      @apply font-sans text-xs;
 
       &:not([class]) {
         @apply rounded-md bg-[var(--astro-code-color-background)] box-decoration-clone p-1;
@@ -87,7 +91,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
     }
 
     ol {
-      @apply list-inside list-decimal text-sm;
+      @apply list-inside list-decimal text-xs;
     }
 
     blockquote {
@@ -102,7 +106,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
       }
 
       summary {
-        @apply cursor-pointer hover:text-brand;
+        @apply cursor-pointer text-sm hover:text-brand;
       }
     }
   }
