--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -28,7 +28,7 @@ const roles = await getCollection('roles').then(async (roles) =>
               {role.end ? <Date>{role.end}</Date> : 'Present'}
             </div>
             <div class="relative">
-              <div class="bg-brand absolute top-5 bottom-1 w-2 rounded-md opacity-30" />
+              <div class="bg-brand absolute bottom-1 top-5 w-2 rounded-md opacity-30" />
               <div data-role-content class="flex flex-col pl-6">
                 <Content />
               </div>
@@ -47,9 +47,9 @@ const roles = await getCollection('roles').then(async (roles) =>
     }
 
     h3 {
-      @apply relative mt-6 font-normal before:absolute before:top-[50%] before:-left-6
-             before:h-[0.95rem] before:w-[0.95rem] before:translate-y-[-50%]
-             before:translate-x-[-0.215rem] before:rounded-full before:bg-brand before:content-['']
+      @apply relative mt-6 font-normal before:absolute before:-left-6 before:top-[50%]
+             before:h-[0.95rem] before:w-[0.95rem] before:translate-x-[-0.215rem]
+             before:translate-y-[-50%] before:rounded-full before:bg-brand before:content-['']
              last-of-type:before:border-[0.2rem] last-of-type:before:border-brand
              last-of-type:before:bg-transparent;
     }
