--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -45,7 +45,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
         <span>{remarkPluginFrontmatter.readingTime} Min Read</span>
       </div>
     </div>
-    <div class="mt-8 mb-12 h-1 rounded-md bg-2"></div>
+    <div class="mb-10 mt-8 h-1 rounded-md bg-2"></div>
     <div class="flex flex-col gap-10 text-sm">
       <Content components={{ a: Anchor, h2: PostSubheader }} />
       {post.data.repo && <GithubCard repo={post.data.repo} />}
