--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -43,7 +43,7 @@ const roles = await getCollection('roles').then(async (roles) =>
 <style lang="scss" is:global>
   [data-role-content] {
     p {
-      @apply mt-3 max-w-[60ch] text-xs;
+      @apply mt-3 max-w-[60ch] text-sm;
     }
 
     h3 {
