--- a/src/components/PostTweet.astro
+++ b/src/components/PostTweet.astro
@@ -18,7 +18,7 @@ href.searchParams.append('via', import.meta.env.USERNAME);
   rel="nofollow noopener noreferrer"
   aria-label="Share on Twitter"
   class={`flex items-center gap-2 rounded-md bg-2 py-2 px-4 shadow
-          hover:outline hover:outline-2 hover:outline-offset-4 hover:outline-brand`}
+          hover:bg-3 duration-200 motion-safe:transition-colors`}
 >
   <Twitter class="h-5 w-5 stroke-brand" />
   <span class="text-brand text-xs">Share</span>
