--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -10,7 +10,7 @@ import { ArrowLeft } from 'lucide-preact';
     <p class="mb-fluid-5 text-4xl">Page Not Found</p>
     <Anchor href="/">
       <div class="group flex items-center gap-4 text-lg">
-        <ArrowLeft class="stroke-brand w-8 h-8" />
+        <ArrowLeft class="h-8 w-8 stroke-brand" />
         <span class="group-hover:text-brand">Back To Home</span>
       </div>
     </Anchor>
