--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -21,9 +21,9 @@ const roles = await getCollection('roles').then(async (roles) =>
     <div class="flex flex-col gap-8">
       {
         roles.map(({ role, Content }) => (
-          <div class="bg-2 rounded-md p-4 shadow">
+          <div class="bg-2 rounded-md p-6 shadow">
             <h2 class="text-brand text-lg font-normal">{role.company}</h2>
-            <div class="text-2 text-sm">
+            <div class="font-1 text-2">
               <Date>{role.start}</Date> -
               {role.end ? <Date>{role.end}</Date> : 'Present'}
             </div>
@@ -43,11 +43,11 @@ const roles = await getCollection('roles').then(async (roles) =>
 <style lang="scss" is:global>
   [data-role-content] {
     p {
-      @apply mt-3 max-w-[60ch] text-sm;
+      @apply mt-3 max-w-[60ch] font-1 text-2;
     }
 
     h3 {
-      @apply relative mt-6 font-normal before:absolute before:-left-6 before:top-[50%]
+      @apply relative mt-6 before:absolute before:-left-6 before:top-[50%]
              before:h-[0.95rem] before:w-[0.95rem] before:translate-x-[-0.215rem]
              before:translate-y-[-50%] before:rounded-full before:bg-brand before:content-['']
              last-of-type:before:border-[0.2rem] last-of-type:before:border-brand
