--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import { Calendar,Clock } from 'lucide-preact';
-import Date from './Date.astro';
+import { Calendar, Clock } from 'lucide-preact';
+import Date from './date.astro';
 
 type Props = { post: CollectionEntry<'posts'> };
 
