--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,5 +1,5 @@
 ---
-import Anchor from '@components/Anchor.astro';
+import Anchor from '@components/anchor.astro';
 import '@fontsource/outfit';
 import '@fontsource/outfit/300.css';
 
