--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
-import Anchor from '@components/Anchor.astro';
-import Layout from '@layouts/Layout.astro';
+import Anchor from '@components/anchor.astro';
+import Layout from '@layouts/layout.astro';
 import { ArrowLeft } from 'lucide-preact';
 ---
 
