--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,11 +1,11 @@
 ---
-import Anchor from '@components/Anchor.astro';
-import Date from '@components/Date.astro';
-import GithubCard from '@components/GithubCard.astro';
-import PostSubheader from '@components/PostSubheader.astro';
-import PostTweet from '@components/PostTweet.astro';
-import PostViews from '@components/PostViews.astro';
-import Layout from '@layouts/Layout.astro';
+import Anchor from '@components/anchor.astro';
+import Date from '@components/date.astro';
+import GithubCard from '@components/github-card.astro';
+import PostSubheader from '@components/post-subheader.astro';
+import PostTweet from '@components/post-tweet.astro';
+import PostViews from '@components/post-views.astro';
+import Layout from '@layouts/layout.astro';
 import { CollectionEntry, getCollection } from 'astro:content';
 import { ArrowLeft, ArrowRight, Calendar, Clock } from 'lucide-preact';
 
