💄 change font to: Maitree

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,7 +1,7 @@
 ---
 import Anchor from '@components/anchor.astro';
-import '@fontsource/outfit';
-import '@fontsource/outfit/300.css';
+import '@fontsource/maitree';
+import '@fontsource/maitree/300.css';
 
 type Props = { title?: string; description?: string; og?: string };
 
