✨ hopefully fixing scrollbar causing CLS...

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -13,7 +13,7 @@ const {
 } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" class="ml-[calc(100vw-100%)]">
   <head>
     <title>{title}</title>
     <meta charset="utf-8" />
