--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,15 +1,17 @@
 ---
+import favicon from '@assets/favicon.svg';
+import ogDefault from '@assets/og.webp';
 import Anchor from '@components/anchor.astro';
 import '@fontsource/maitree';
 import '@fontsource/maitree/300.css';
+import { Image } from 'astro:assets';
 
 type Props = { title?: string; description?: string; og?: string };
 
-const favicon = await import('@public/favicon.svg?raw');
 const {
   title = 'Christian Penrod | Front-End Web Developer',
   description = 'Developing for the web since 2015, based in Pittsburgh PA.',
-  og = 'og.webp',
+  og = ogDefault.src,
 } = Astro.props;
 ---
 
@@ -42,7 +44,13 @@ const {
   >
     <header class="flex items-center gap-4 py-4 text-2 text-xs">
       <a href="/" class="mr-auto h-7 w-7" aria-label="Home">
-        <Fragment set:html={favicon.default} aria-hidden />
+        <Image
+          src={favicon.src}
+          width={favicon.width}
+          height={favicon.height}
+          alt="Home"
+          aria-hidden
+        />
       </a>
       <Anchor href="/blog">Blog</Anchor>
       <Anchor href="/career">Career</Anchor>
