🏗️ single import alias

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,7 +1,7 @@
 ---
-import favicon from '@assets/favicon.svg';
-import ogDefault from '@assets/og.webp';
-import Anchor from '@components/anchor.astro';
+import favicon from '@/assets/favicon.svg';
+import ogDefault from '@/assets/og.webp';
+import Anchor from '@/components/anchor.astro';
 import '@fontsource/maitree';
 import '@fontsource/maitree/300.css';
 import { Image } from 'astro:assets';
