--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,6 @@
 ---
-import PostCard from '@components/post-card.astro';
-import Layout from '@layouts/layout.astro';
+import PostCard from '@/components/post-card.astro';
+import Layout from '@/layouts/layout.astro';
 import { getCollection } from 'astro:content';
 
 const posts = (await getCollection('posts')).sort(
