--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -1,6 +1,6 @@
 ---
-import Date from '@components/date.astro';
-import Layout from '@layouts/layout.astro';
+import Date from '@/components/date.astro';
+import Layout from '@/layouts/layout.astro';
 import { getCollection } from 'astro:content';
 
 const roles = await getCollection('roles').then(async (roles) =>
@@ -21,14 +21,14 @@ const roles = await getCollection('roles').then(async (roles) =>
     <div class="flex flex-col gap-8">
       {
         roles.map(({ role, Content }) => (
-          <div class="bg-2 rounded-md p-6 shadow">
-            <h2 class="text-brand text-lg font-normal">{role.company}</h2>
+          <div class="rounded-md bg-2 p-6 shadow">
+            <h2 class="font-normal text-brand text-lg">{role.company}</h2>
             <div class="font-1 text-2">
               <Date>{role.start}</Date> -
               {role.end ? <Date>{role.end}</Date> : 'Present'}
             </div>
             <div class="relative">
-              <div class="bg-brand absolute bottom-1 top-5 w-2 rounded-md opacity-30" />
+              <div class="absolute bottom-1 top-5 w-2 rounded-md bg-brand opacity-30" />
               <div data-role-content class="flex flex-col pl-6">
                 <Content />
               </div>
