--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import src from '@assets/me.webp';
-import Anchor from '@components/anchor.astro';
-import GithubCard from '@components/github-card.astro';
-import PostCard from '@components/post-card.astro';
-import Layout from '@layouts/layout.astro';
+import src from '@/assets/me.webp';
+import Anchor from '@/components/anchor.astro';
+import GithubCard from '@/components/github-card.astro';
+import PostCard from '@/components/post-card.astro';
+import Layout from '@/layouts/layout.astro';
 import { Image } from 'astro:assets';
 import { getCollection } from 'astro:content';
 import { ArrowRight, Minus } from 'lucide-preact';
