🗑️ remove remaining netlify stuff

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -62,7 +62,7 @@ const {
       <p>Created by: Christian Penrod ©{new Date().getUTCFullYear()}</p>
       <p>
         Built with: <Anchor href="https://docs.astro.build">Astro</Anchor>
-        on <Anchor href="https://netlify.com/docs">Netlify</Anchor>
+        on <Anchor href="https://vercel.com/docs">Vercel</Anchor>
       </p>
     </footer>
   </body>
