--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -37,6 +37,7 @@ const {
     <meta name="twitter:image" content={new URL(og, Astro.site)} />
     <link rel="icon" type="image/svg+xml" href={favicon.src} />
     <link href={new URL(Astro.url.pathname, Astro.site)} rel="canonical" />
+    <script defer src="/_vercel/insights/script.js"></script>
   </head>
   <body
     class={`mx-auto flex min-h-screen max-w-screen-lg flex-col bg-1 text-sm
