--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -101,4 +101,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
 
     :global(code)
       @apply font-sans p-0
+
+      :global(.visited)
+        @apply opacity-30 select-none grayscale-[0.7]
 </style>
